# parallel-proj

./: .gitignore  CMakeLists.txt  Makefile  README.md  final-proj.code-workspace  test_input.txt  test_script.sh
.devcontainer/: Dockerfile  Dockerfile.new  devcontainer.json  docker-compose.yml
proposal/: P-UDT.drawio  __latexindent_temp.tex  proposal.aux  proposal.bbl  proposal.blg  proposal.fdb_latexmk  proposal.fls  proposal.out  proposal.tex  proposal.xdv  reference.bib  root-parallel.drawio  sample-sigconf.tex  sample-sigconf.xdv  system design
proposal/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: arbiter.py  benchmark.cpp  main.cpp  main_leaf.cpp  main_root.cpp  main_single.cpp  main_tree.cpp  thread_pool.hpp  utils.cpp  utils.h
src/MCTS/: MCTS.cpp  MCTS.h  MCTS_root.cpp  MCTS_root.h
src/MCTScuda/: MCTS_leaf.cpp  MCTS_leaf.h  bridge.cpp  leaf.cu  leaf.h
src/MCTSroot/: MCTS_root.cpp  MCTS_root.h
src/MCTStree/: MCTS_tree.cpp  MCTS_tree.h
src/THC-chess/: CMakeLists.txt  README.md
src/THC-chess/src/: ChessDefs.h  ChessPosition.cpp  ChessPosition.h  demo.cpp  thc-regen.cpp  thc.cpp  thc.h
src/UCI/: UCI.cpp  UCI.h  UCI.py
